# nutanixcertificationtool

./: .gitattributes  .gitignore  ARCHITECTURE-CROSS-REVIEW.md  CertStudy.sln  ELECTRON-ARCHITECTURE-REVIEW.md  LICENSE  NCA-75-Part1.md  NCA-75-Part2.md  NCA-75-Part3-GapFill.md  NCM-MCI-Part1.md  NCM-MCI-Part2.md  NCM-MCI-Part3.md  NCM-MCI-Part4.md  NCM-MCI-Part5-GapFill.md  NCP-AI-Part1.md  NCP-AI-Part2.md  NCP-AI-Part3.md  NCP-AI-Part4.md  NCP-AI-Part5-GapFill.md  NCP-CI-Part1.md  NCP-CI-Part2.md  NCP-CI-Part3.md  NCP-CI-Part4.md  NCP-CI-Part5-GapFill.md  NCP-US-Part1.md  NCP-US-Part2-D3.md  NCP-US-Part2-D4.md  NCP-US-Part3-GapFill.md  NutanixCertificationTool.sln  README.md  RISK_REGISTER.md  SPRINT_PLAN.md  export_to_pdf.py  generate_questions.py  validate-project.sh  validate_answers.py
.sisyphus/: boulder.json
CertStudy/: CertStudy.csproj  MainForm.cs  Program.cs  (+1 more)
CertStudy-Electron/: .gitignore  ARCHITECTURE.md  KNOWN-ISSUES.md  LLM-HANDOFF.md  README.md  forge.config.js  main.js  package-lock.json  package.json  preload.js  vitest.config.js
CertStudy.Avalonia/: .gitignore  App.axaml  App.axaml.cs  CertStudy.Avalonia.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
CertStudy.Core/: CertStudy.Core.csproj
CertStudy.Maui/: App.xaml  App.xaml.cs  CertStudy.Maui.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  _Imports.razor  libman.json
CertStudy.PWA/: index.html  manifest.json  sw.js
cert-editor/src-tauri/: Cargo.toml  tauri.conf.json
cert-editor/src-tauri/src/: db.rs  export.rs  main.rs  models.rs  ollama.rs
(+337 files in other folders)
